# CompPhy-course-assignment1-SYSU-PHY308

./: CMakeLists.txt  README.md
include/: info_op.h  matrix_op.h
report/: assignment-report-1.md  perf_results.csv  perf_results_mpiseq_nptest.csv
scripts/: perf_test.py
src/: MM_RS_mpi.c  MM_RS_seq.c  MM_cblas_mpi.c  MM_cblas_seq.c  MPIMatrixMultiply_bsp.c  SeqMatrixMultiply.c  comprehensive_demo.c
